--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native-stack": "^7.3.27",
     "axios": "^1.12.2",
     "expo": "54.0.23",
+    "expo-clipboard": "~8.0.8",
     "expo-document-picker": "~14.0.8",
     "expo-image-picker": "^17.0.8",
     "expo-linear-gradient": "~15.0.7",
