--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "axios": "^1.12.2",
     "expo": "54.0.23",
     "expo-clipboard": "~8.0.8",
+    "expo-device": "~8.0.10",
     "expo-document-picker": "~14.0.8",
     "expo-image-picker": "^17.0.8",
     "expo-linear-gradient": "~15.0.7",
+    "expo-notifications": "~0.32.16",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
     "react-dom": "19.1.0",
