--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-clipboard": "~8.0.8",
     "expo-device": "~8.0.10",
     "expo-document-picker": "~14.0.8",
+    "expo-image-manipulator": "~14.0.8",
     "expo-image-picker": "^17.0.8",
     "expo-linear-gradient": "~15.0.7",
     "expo-notifications": "~0.32.16",
